--- a/tercer proyecto/inventario-frontend/.gitignore
+++ b/tercer proyecto/inventario-frontend/.gitignore
@@ -22,3 +22,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Node
+node_modules/
+dist/
+.vite/
+.env
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+*.log
